# LLM_Optimizer

./: README.md  config.py  gemini_logger.py  selector.py  trial_gemini_models.py
LLM_Optimizer/: .gitignore  main.py  trial_gemini_models.py
Prompt_Optimizer/: .gitignore  main.py  requirements.txt
batching-model wise/: model_wise_batching.py
batching-model wise 1/: README.md  batcher.py  catalog_selector.py  model_catalog.py  policy.py  prompts_batch.json  prompts_batch_coding_100.json  simulate.py
dynamic_cache/: .env.example  README.md  cache_manager.py  cache_policy.py  config.py  demo.py  embedding_service.py  llm_service.py  main.py  models.py  optimizer.py  requirements.txt  streamlit_app.py  test_100.py  verify_setup.py
integrated-cost-optimizer/: .env.example  .gitignore  README.md  config.py  demo.py  demo2.py  main.py  models.py  pyproject.toml  requirements.txt  streamlit_app.py
integrated-cost-optimizer/batching/: __init__.py  batcher.py  model_catalog.py  model_selector.py  policy.py
integrated-cost-optimizer/cache/: __init__.py  embedding_service.py  manager.py  policy.py
integrated-cost-optimizer/llm/: __init__.py  service.py
integrated-cost-optimizer/pipeline/: __init__.py  orchestrator.py  tracker.py
integrated-cost-optimizer/prompt_optimizer/: __init__.py  analyzer.py  cleaner.py  shortener.py  tokenizer.py
integration/: INTEGRATION_PLAN.md  README_INTEGRATION.md  api.py  orchestrator.py  requirements_integration.txt  test_integration.py
llm-tracker/: .gitignore
model_selection_and_logging/: config.py  executor.py  main.py  (+2 more)
(+19 files in other folders)
